--- a/src/components/Ui/AppBar/styles.scss
+++ b/src/components/Ui/AppBar/styles.scss
@@ -3,16 +3,26 @@
     display: flex;
     justify-content: space-between;
 
-    background-color: #F3F3F3;
     border-radius: 15px;
     padding: 22px;
     max-width: 638px;
     margin: 0 auto;
     width: 100%;
 
+    &.lightAppBar {
+        background-color: #F3F3F3;
+        transition: all .8s ease;
+    }
+
+    &.darkAppBar {
+        background: rgba(218, 220, 224, 0.03);
+        transition: all .8s ease;
+    }
+
     button {
         background-color: transparent;
         border: none;
+        cursor: pointer;
         padding: 0;
 
         .iconGray {
