--- a/src/app.scss
+++ b/src/app.scss
@@ -3,6 +3,11 @@
 	min-height: 100vh;
 	padding-top: 63px;
 
+	&__game {
+		display: flex;
+		justify-content: center;
+	}
+
 	&__keyboard {
 		display: flex;
 		justify-content: center;
