--- a/src/components/Game/styles.scss
+++ b/src/components/Game/styles.scss
@@ -1,3 +1,34 @@
+@import "scss/styles.scss";
+
 .game {
-    
+    &__examples {
+        display: flex;
+        gap: 11px;
+        margin-left: 10px;
+
+        margin-top: 23px;
+        margin-bottom: 19px;
+
+        .letter {
+            background: #FFFFFF;
+            border: 1px solid #000000;
+            border-radius: 5px;
+            font-family: 'Roboto';
+            font-weight: 700;
+            font-size: 35px;
+            height: 75px;
+            text-align: center;
+            width: 75px;
+
+            &.activeGreen {
+                background-color: $greenColor;
+            }
+            &.activeYellow {
+                background-color: $yellowColor;
+            }
+            &.activeGray {
+                background-color: $grayColor;
+            }
+        }
+    }
 }
