feat: added random word

--- a/src/components/keyboard/styles.scss
+++ b/src/components/keyboard/styles.scss
@@ -46,6 +46,10 @@
         }
 
         .clearKey {
+            align-items: center;
+            display: flex;
+            justify-content: center;
+
             svg {
                 font-size: 22px;
             }
