--- a/src/app.scss
+++ b/src/app.scss
@@ -2,4 +2,17 @@
 	margin: auto;
 	min-height: 100vh;
 	padding-top: 63px;
+
+	&__board {
+		position: relative;
+
+		&-game {
+			position: absolute;
+			top: 0;
+			left: 0;
+			bottom: 0;
+			right: 0;
+			z-index: 7;
+		}
+	}
 }
