--- a/src/components/Board/styles.scss
+++ b/src/components/Board/styles.scss
@@ -1,10 +1,9 @@
 @import "scss/styles.scss";
 
-.game {
+.board {
     &__examples {
         display: flex;
         gap: 11px;
-        
         margin: 11px 0;
         margin-left: 11px;
 
@@ -13,8 +12,8 @@
             display: flex;
             justify-content: center;
 
-            background: transparent;
-            border: none;
+            background: #FFFFFF;
+            border: 1px solid #000000;
             border-radius: 5px;
             font-family: 'Roboto';
             font-weight: 700;
